--- a/nlp/final/summarize-with-hugginface.ipynb
+++ b/nlp/final/summarize-with-hugginface.ipynb
@@ -192,6 +192,21 @@
     "# The URL to scrape — loading HTML with requests (web scraping may fail if the site blocks automated requests).\n",
     "url = \"https://medium.com/analytics-vidhya/openai-gpt-3-language-models-are-few-shot-learners-82531b3d3122\""
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e6d088ad",
+   "metadata": {},
+   "source": [
+    "```python\n",
+    "\n",
+    "# Send HTTP GET request.\n",
+    "response = requests.get(url)\n",
+    "# Parse response HTML with BeautifulSoup.\n",
+    "soup = BeautifulSoup(response.text, \"html.parser\")\n",
+    "\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
