--- a/nlp/final/summarize-with-hugginface.ipynb
+++ b/nlp/final/summarize-with-hugginface.ipynb
@@ -207,6 +207,25 @@
     "\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aa48cdde",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    # Send HTTP GET request.\n",
+    "    response = requests.get(url, timeout=10)\n",
+    "    response.raise_for_status()\n",
+    "\n",
+    "    # Parse response HTML with BeautifulSoup.\n",
+    "    soup = BeautifulSoup(response.text, \"html.parser\")\n",
+    "except Exception as e:\n",
+    "    print(\"Failed to fetch or parse the URL:\", e)\n",
+    "    # Fallback: use a local string or prompt user to supply text"
+   ]
   }
  ],
  "metadata": {
