--- a/nlp/final/summarize-with-hugginface.ipynb
+++ b/nlp/final/summarize-with-hugginface.ipynb
@@ -226,6 +226,19 @@
     "    print(\"Failed to fetch or parse the URL:\", e)\n",
     "    # Fallback: use a local string or prompt user to supply text"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2a0a1ffa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Find all paragraph tags.\n",
+    "paragraphs = soup.find_all(\"p\")\n",
+    "# Join text from all <p> tags into a single string as the article text.\n",
+    "article_text = \" \".join([p.get_text() for p in paragraphs])"
+   ]
   }
  ],
  "metadata": {
