--- a/nlp/final/summarize-with-hugginface.ipynb
+++ b/nlp/final/summarize-with-hugginface.ipynb
@@ -258,6 +258,25 @@
     "# Print the entire scraped article text (can be very long).\n",
     "print(article_text[:])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "924e0c22",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5923\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Print number of characters in article_text.\n",
+    "print(len(article_text))"
+   ]
   }
  ],
  "metadata": {
