--- a/nlp/final/summarize-with-hugginface.ipynb
+++ b/nlp/final/summarize-with-hugginface.ipynb
@@ -277,6 +277,25 @@
     "# Print number of characters in article_text.\n",
     "print(len(article_text))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0ca6a61a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5923 <class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Print length and type for debugging.\n",
+    "print(len(article_text), type(article_text))"
+   ]
   }
  ],
  "metadata": {
