--- a/nlp/final/summarize-with-hugginface.ipynb
+++ b/nlp/final/summarize-with-hugginface.ipynb
@@ -296,6 +296,14 @@
     "# Print length and type for debugging.\n",
     "print(len(article_text), type(article_text))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b54a2368",
+   "metadata": {},
+   "source": [
+    "# BART model"
+   ]
   }
  ],
  "metadata": {
