--- a/nlp/final/summarize-with-hugginface.ipynb
+++ b/nlp/final/summarize-with-hugginface.ipynb
@@ -304,6 +304,22 @@
    "source": [
     "# BART model"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "255024e9",
+   "metadata": {},
+   "source": [
+    "```python\n",
+    "\n",
+    "# Uninstall torch (shell) — WARNING: uninstalling torch after importing it earlier can destabilize the running kernel.\n",
+    "!pip uninstall torch torchvision torchaudio -y\n",
+    "\n",
+    "# Reinstall torch with a specific CUDA wheel index (cu121). This may not match the environment and usually requires restart.\n",
+    "!pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu121\n",
+    "\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
