--- a/nlp/final/summarize-with-hugginface.ipynb
+++ b/nlp/final/summarize-with-hugginface.ipynb
@@ -433,6 +433,18 @@
     "# Create a summarization pipeline using facebook/bart-large-cnn and place it on GPU device 0 (device=0).\n",
     "summarizer = pipeline(\"summarization\", model=\"facebook/bart-large-cnn\", device=0)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "625c5e7c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Naive chunking by characters: split article into 1024-character pieces.\n",
+    "chunk_size = 1024\n",
+    "article_chunks = [article_text[i:i+chunk_size] for i in range(0, len(article_text), chunk_size)]"
+   ]
   }
  ],
  "metadata": {
