--- a/nlp/final/summarize-with-hugginface.ipynb
+++ b/nlp/final/summarize-with-hugginface.ipynb
@@ -445,6 +445,27 @@
     "chunk_size = 1024\n",
     "article_chunks = [article_text[i:i+chunk_size] for i in range(0, len(article_text), chunk_size)]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "074e18ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Show how many chunks were created\n",
+    "len(article_chunks)"
+   ]
   }
  ],
  "metadata": {
