--- a/nlp/final/summarize-with-hugginface.ipynb
+++ b/nlp/final/summarize-with-hugginface.ipynb
@@ -466,6 +466,20 @@
     "# Show how many chunks were created\n",
     "len(article_chunks)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "52f7be36",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Summarize all chunks with specified generation parameters; batch_size=8 for parallel processing.\n",
+    "summaries = summarizer(article_chunks, max_length=150, min_length=50, do_sample=False, batch_size=8)\n",
+    "\n",
+    "# Extract the 'summary_text' field from each summary dict.\n",
+    "summaries = [summary['summary_text'] for summary in summaries]"
+   ]
   }
  ],
  "metadata": {
