--- a/nlp/final/summarize-with-hugginface.ipynb
+++ b/nlp/final/summarize-with-hugginface.ipynb
@@ -480,6 +480,33 @@
     "# Extract the 'summary_text' field from each summary dict.\n",
     "summaries = [summary['summary_text'] for summary in summaries]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f89e864c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['OpenAI recently published a paper describing GPT-3, a deep-learning model for Natural Language Processing. The model is pre-trained on nearly half a trillion words and achieves SOTA performance on several NLP benchmarks without fine-tuning. OpenAI’s researchers: “In this work we do not fine-tune GPT -3 because our focus is on task-agnostic performance”',\n",
+       " 'GPT-3 is mainly an academic endeavor. The commercial utility which is something that can help us in industry is not possible with G PT-3. The other type of model is what’s called a denoising autoencoder like BERT and RoBERTa and XLNET.',\n",
+       " 'OpenAI researchers state that larger models make increasingly efficient use of in-context information. One hypothesis is that GPT-3 has so many parameters (half the number of tokens trained on) that it is starting to act like a memory network. I read somewhere that the whole story of G PT-3 costs “nearly $12 million dollars”',\n",
+       " 'GPT-3 is upgraded with 175 billion parameters, it tailors and escalates the GPT-2 architecture. It reflects substantial performance on various NLP tasks and benchmarks in three distinct shots, i.e. zero-shot, one-shot and some-shot environments.',\n",
+       " 'GPT-3 was trained on V100 GPU on the part of a high-bandwidth cluster provided by Microsoft. The results show that the model showed strong performance with translation, question-answering, and cloze tasks. The researchers claim that G PT-3 can even generate news articles in which human evaluators have difficulty distinguishing from articles written by humans.',\n",
+       " 'GPT-3 can execute an amazing bandwidth of natural language processing tasks. It is capable of performing machine translation, question-answering, reading conceptual tasks, scripting poems, and elementary math. 4 Analytics Vidhya is a community of Generative AI and Data Science professionals.']"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "\n",
+    "# Show the list of summaries\n",
+    "summaries"
+   ]
   }
  ],
  "metadata": {
