--- a/nlp/final/summarize-with-hugginface.ipynb
+++ b/nlp/final/summarize-with-hugginface.ipynb
@@ -537,6 +537,25 @@
    "source": [
     "# T5 model"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4ce8ed6b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Device set to use cuda:0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create a summarization pipeline using t5-large on GPU device 0.\n",
+    "summarizer = pipeline(\"summarization\", model=\"t5-large\", device=0)"
+   ]
   }
  ],
  "metadata": {
