--- a/nlp/final/summarize-with-hugginface.ipynb
+++ b/nlp/final/summarize-with-hugginface.ipynb
@@ -556,6 +556,17 @@
     "# Create a summarization pipeline using t5-large on GPU device 0.\n",
     "summarizer = pipeline(\"summarization\", model=\"t5-large\", device=0)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "53fcfd53",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chunk_size = 1024\n",
+    "article_chunks = [article_text[i:i+chunk_size] for i in range(0, len(article_text), chunk_size)]"
+   ]
   }
  ],
  "metadata": {
