--- a/nlp/final/summarize-with-hugginface.ipynb
+++ b/nlp/final/summarize-with-hugginface.ipynb
@@ -567,6 +567,17 @@
     "chunk_size = 1024\n",
     "article_chunks = [article_text[i:i+chunk_size] for i in range(0, len(article_text), chunk_size)]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Summarize chunks with same generation settings.\n",
+    "summaries = summarizer(article_chunks, max_length=150, min_length=50, do_sample=False, batch_size=8)\n",
+    "summaries = [summary['summary_text'] for summary in summaries] "
+   ]
   }
  ],
  "metadata": {
