--- a/nlp/final/summarize-with-hugginface.ipynb
+++ b/nlp/final/summarize-with-hugginface.ipynb
@@ -578,6 +578,26 @@
     "summaries = summarizer(article_chunks, max_length=150, min_length=50, do_sample=False, batch_size=8)\n",
     "summaries = [summary['summary_text'] for summary in summaries] "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ceddad60",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "len(summaries)"
+   ]
   }
  ],
  "metadata": {
