--- a/nlp/final/summarize-with-hugginface.ipynb
+++ b/nlp/final/summarize-with-hugginface.ipynb
@@ -598,6 +598,16 @@
    "source": [
     "len(summaries)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b52b37a3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_summary = \" \".join(summaries)"
+   ]
   }
  ],
  "metadata": {
