--- a/nlp/final/summarize-with-hugginface.ipynb
+++ b/nlp/final/summarize-with-hugginface.ipynb
@@ -608,6 +608,26 @@
    "source": [
     "final_summary = \" \".join(summaries)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cb089609",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1799"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "len(final_summary)"
+   ]
   }
  ],
  "metadata": {
