--- a/nlp/final/summarize-with-hugginface.ipynb
+++ b/nlp/final/summarize-with-hugginface.ipynb
@@ -628,6 +628,24 @@
    "source": [
     "len(final_summary)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "226bf6c0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "openAI recently published a paper describing GPT-3, a deep-learning model for natural language processing . the model is pre-trained on nearly half a trillion words and achieves SOTA performance on several NLP benchmarks without fine-tuning . soheil Tehranipour: \"one of the things i want to explore is what you can do with giant language models\" commercial utility which is something that can help us in industry is not possible with GPT-3 (at least not possible right not) which is only in reach for the very top tech companies like google or openAI . there are two architectural patterns that we see with these transformers’ architectures . the other type of model is what’s called a denoising autoencoder like BERT and RoBERTa and xlnet . the steeper “in-context learning curves” for large models show improved ability to learn from contextual information . one hypothesis is that GPT-3 has so many parameters (half the number of tokens trained on) that it is starting to act like a memory network . GPT-2 is a direct scale-up of GPT, with more than 10X the parameters . it reflects substantial performance on various NLP tasks and benchmarks in three distinct shots, i.e. zero-shot, one-shot and some-shot environments . GPT-3 is an incredibly large model, and one cannot expect to build something like this without fancy computational resources . as with GPT-2, openAI has not released the trained model or the code . there is a GitHub repository containing some of the test datasets and a collection of text scribbles . openAI has recently unveiled the latest epitome of its eye-catching text generator, GPT-3 that has 175 billion parameters . it is capable of performing machine translation, question-answering, reading conceptual tasks, scripting poems, and elementary math. public domain .\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(final_summary)"
+   ]
   }
  ],
  "metadata": {
